Closed Bug 1264291 Opened 8 years ago Closed 8 years ago

initEvent must unset the stop propagation flag

Categories

(Core :: DOM: Events, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla51
Tracking Status
firefox51 --- fixed

People

(Reporter: ayg, Assigned: ayg)

Details

(Whiteboard: btpp-active)

Attachments

(1 file)

Bug 852115 comment 2 says we already do this, but http://w3c-test.org/dom/events/Event-initEvent.html says we don't (even after fixing bug 1263937).  Chrome 49 passes the test, IE 11 does not.
Note that this makes little practical difference unless bug 1263937 is fixed, because currently the end of dispatch unsets the flag anyway.  So currently this only is detectable if you call .stopPropagation() when the event is not currently being dispatched, which is a bit strange.
Attached patch PatchSplinter Review
Attachment #8782413 - Flags: review?(bugs)
Attachment #8782413 - Flags: review?(bugs) → review+
Pushed by ayg@aryeh.name:
https://hg.mozilla.org/integration/mozilla-inbound/rev/0cca69a389fc
initEvent must unset the stop propagation flag; r=smaug
https://hg.mozilla.org/mozilla-central/rev/0cca69a389fc
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla51
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: