Bug 1264291 - initEvent must unset the stop propagation flag; r=smaug

Tests upstream <https://github.com/w3c/web-platform-tests/pull/3472>.